--- a/module/Meetup/view/meetup/show.phtml
+++ b/module/Meetup/view/meetup/show.phtml
@@ -32,4 +32,7 @@
         </div>
 
     </div>
+    <div class="row">
+        <a class="btn btn-primary" href="<?= $this->url('meetups') ?>"> Back to List</a>
+    </div>
 
